<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.exam.Actividad1">

    <TextView android:id="@+id/lblperfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblperfil"
        android:textSize="24sp"/>
    <TextView android:id="@+id/lblnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/lblperfil"
        android:text="@string/lblnombre" />
    <EditText android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblperfil"
        android:layout_toRightOf="@id/lblnombre"
        android:inputType="text"/>
    <TextView android:id="@+id/lblprovincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:text="@string/lblprovincia" />
    <Spinner android:id="@+id/spiner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblprovincia"/>
    <TextView android:id="@+id/lblsexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spiner1"
        android:text="@string/lblsexo" />
    <RadioGroup android:id="@+id/group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblsexo">

        <RadioButton android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio1"/>
        <RadioButton android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2"/>
    </RadioGroup>
    <TextView android:id="@+id/lblconocimientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group1"
        android:text="@string/lblconocimientos" />
    <CheckBox android:id="@+id/chk1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblconocimientos"
        android:text="@string/chk1"/>
    <CheckBox android:id="@+id/chk2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblconocimientos"
        android:layout_toRightOf="@id/chk1"
        android:text="@string/chk2"/>
    <CheckBox android:id="@+id/chk3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblconocimientos"
        android:layout_toRightOf="@id/chk2"
        android:text="@string/chk3"/>
    <CheckBox android:id="@+id/chk4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblconocimientos"
        android:layout_toRightOf="@id/chk3"
        android:text="@string/chk4"/>
    <TextView android:id="@+id/lblresultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chk1"
        android:text="@string/lblresultado" />
    <EditText android:id="@+id/txt2"
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled="false"
        android:layout_below="@+id/lblresultado" />
    <TextView android:id="@+id/lbltxtsuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblresultado"
        android:layout_toRightOf="@id/txt2"
        android:text="@string/lbltxtsuma"
        android:textSize="24sp" />
    <EditText android:id="@+id/txt3"
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled="false"
        android:layout_below="@+id/lblresultado"
        android:layout_toRightOf="@id/lbltxtsuma"
        android:layout_alignBottom="@+id/txt2" />
    <TextView android:id="@+id/lbltxtigual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblresultado"
        android:layout_toRightOf="@id/txt3"
        android:text="@string/lbltxtigual"
        android:textSize="24sp" />
    <EditText android:id="@+id/txt4"
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_toRightOf="@id/lbltxtigual"
        android:layout_below="@+id/lblresultado"/>
    <Button android:id="@+id/btnevaluar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/btnevaluar"
        android:layout_below="@+id/txt4"
        android:onClick= "evaluar"/>
    <TextView android:id="@+id/lblcandidatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnevaluar"
        android:text="@string/lblcandidatos"/>

</RelativeLayout>
