<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad1b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.exam.Actividad1b">

    <TextView android:id="@+id/lblseleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblseleccion"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView android:id="@+id/lblnombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblseleccion"
        android:layout_toRightOf="@id/txt3"
        android:text="@string/lblnombre2"/>
    <TextView android:id="@+id/lblprovincia2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblnombre2"
        android:layout_toRightOf="@id/txt3"
        android:text="@string/lblprovincia2" />
    <TextView android:id="@+id/lblsexo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblprovincia2"
        android:layout_toRightOf="@id/txt3"
        android:text="@string/lblsexo2"/>
    <TextView android:id="@+id/lblconocimientos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblsexo2"
        android:layout_toRightOf="@id/txt3"
        android:text="@string/lblconocimientos2" />
    <Button android:id="@+id/btnaceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnaceptar"
        android:layout_below="@+id/lblconocimientos2"
        android:onClick= "aceptar"/>
    <Button android:id="@+id/btnrechazar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblconocimientos2"
        android:text="@string/btnrechazar"
        android:layout_toRightOf="@id/btnaceptar"
        android:onClick= "rechazar"/>
</RelativeLayout>
